--- a/app/views/photos/show.html.erb
+++ b/app/views/photos/show.html.erb
@@ -1,4 +1,4 @@
 <h1>登録が完了しました</h1>
 <br>
-<p><%= image_tag photo.image.to_s %></p>
+<p><%= image_tag @photo.image.to_s %></p>
 <a href="/photos/new">新しく登録する</a>
